--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AmplifyAngularTemplate</title>
+  <title>Medical Content Generator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" 
+    content="default-src 'self';
+             script-src 'self' 'unsafe-eval' 'unsafe-inline';
+             style-src 'self' 'unsafe-inline';
+             connect-src 'self' https://generativelanguage.googleapis.com https://*.amazonaws.com;
+             img-src 'self' data: https:;
+             font-src 'self' data:;">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
